# capability-runtime

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci-tier0.yml  publish-pypi.yml
archive/: README.md  README.zh-CN.md
archive/examples-legacy/: README.md  README.zh-CN.md
archive/instructcontext/: 3-false-strategic-review.md  4-true-codex-phase1-protocol-foundation.md  5-true-CODEX_CONTEXT_BRIEF.md  (+7 more)
config/: README.md  README.zh-CN.md  default.yaml  sdk.example.yaml
docs_for_coding_agent/: 00-mental-model.md  00-mental-model.zh-CN.md  01-capability-inventory.md  02-patterns.md  03-bridge-wiring.md  04-agent-domain-guide.md  README.md  README.zh-CN.md  __init__.py  capability-coverage-map.md  capability-coverage-map.zh-CN.md  cheatsheet.md  cheatsheet.zh-CN.md  contract.md  contract.zh-CN.md
examples/: README.md  README.zh-CN.md  __init__.py
help/: 00-overview.md  00-overview.zh-CN.md  01-quickstart.md  01-quickstart.zh-CN.md  02-config-reference.md  02-config-reference.zh-CN.md  03-python-api.md  03-python-api.zh-CN.md  04-examples-guide.md  04-examples-guide.zh-CN.md  05-hosted-runtime-and-evidence.md  05-hosted-runtime-and-evidence.zh-CN.md  06-troubleshooting.md  06-troubleshooting.zh-CN.md  07-release-and-pypi.md  07-release-and-pypi.zh-CN.md  README.md  README.zh-CN.md
instructcontext/: 1-true-HOW_TO_USE.md  2-false-CODEX_NEXT_STEP.md  2-false-review-agently-skills-runtime-v0.2.0.md  3-false-codex-instruction.md  4-true-agently-skills-runtime-full-spec.md  4-true-codex-phase2-runtime-layer.md  CODEX_PROMPT.md  HOW_TO_USE.md  agently-skills-runtime-spec-v1.md
projects/agently-skills-web-prototype/backend/: pyproject.toml
projects/agently-skills-web-prototype/backend/src/agently_skills_web_backend/: __init__.py  app.py  approvals.py  demo.py  models.py  settings.py
projects/agently-skills-web-prototype/backend/tests/: test_event_log.py  test_run_service_demo.py
scripts/: check_release_tag_version.py  tier0.sh
tests/: capability-runtime-test-cases.md  integration-smoke-test-cases.md  phase1-protocol-foundation-test-cases.md  phase2-runtime-layer-test-cases.md  phase3-adapters-scenarios-test-cases.md  skill-first-bridge-system-test-cases.md  test_agently_action_artifact_evidence.py  test_agently_backend.py  test_agently_backend_authorization_header_contract.py  test_agently_backend_replay.py  test_agently_bridge_diagnostics.py  test_agently_workspace_recall_preview.py  test_backend_mode.py  test_bilingual_docs_surface.py  test_bridge_artifacts_passthrough.py  test_bridge_register_tool_public_api.py  test_coding_agent_examples_atomic.py  test_coding_agent_examples_recipes.py  test_config_glue.py  test_dependency_pins.py  test_docs_no_openspec_changes_contract_refs.py  test_docs_pinned_dependency_versions.py  test_docs_scheme2_no_skilladapter_residue.py  test_dynamic_workflow_plan_contract.py  test_dynamic_workflow_runtime.py  test_error_observability.py  test_examples_alignment_fixes_l1.py  test_examples_no_agent_sdk_imports.py  test_examples_real_evidence_strict_integration.py  test_examples_real_integration.py  test_examples_smoke.py  test_examples_ui_events_showcase_offline.py  test_examples_ui_events_showcase_real_fallback.py  test_examples_ui_events_showcase_real_integration.py  test_examples_ui_events_showcase_ui_contract.py  test_examples_workflow_skills_first_smoke.py  test_guards.py  test_host_toolkit_history_assembler.py  test_host_toolkit_invoke_capability.py  test_host_toolkit_invoke_capability_shared_runtime.py  (+60 more)
(+518 files in other folders)
