[project]
name = "agently-skills-web-prototype-backend"
version = "0.1.0"
description = "Web prototype backend to validate Agently x Skills Runtime SDK capabilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "PyYAML",
  "skills-runtime-sdk-python",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

